test/language/spec/stdlib/invalid/union_dup_field.topo
// TEST: union with two fields sharing the same name.
// Duplicate field names make the tag-selected variant ambiguous.
// EXPECT-ERROR: duplicate field name 'v' in union<...>

namespace bad {
  public:
    bool take(union<tag: u8, v: i64, v: f64> u);
}
